ARROW-10247: [C++][Dataset] Support writing datasets partitioned on dictionary columns